--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 .App {
   text-align: center;
 }
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background-color: #0c0513;
+  background-image: url(./Assets/pre.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 .App-logo {
   height: 40vmin;
