new features to portfolio, projectts, resume, navbar

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,62 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: "Quicksand";
+  src: url("/public/Quicksand-Light.woff") format("woff2"),
+    url("/public/Quicksand-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* reset & common styles */
+body,
+ul,
+h1,
+h2,
+h3,
+p,
+button,
+a,
+div {
+  /* margin: 0;
+  padding: 0; */
+  color: white;
+  font-family: "Quicksand";
+  letter-spacing: 2px;
+  list-style-type: none;
+  text-decoration: none;
+}
+.btn-primary {
+  color: #5a5454;
+  background-color: #90ee90;
+  border-color: #cff2cf;
+}
+.btn-primary:hover {
+  color: #4e5751;
+  background-color: #48e6e6;
+  border-color: #a9ebeb;
+  outline: #a9ebeb;
+  box-shadow: #a9ebeb;
+}
+/* body {
+  background: rgb(100, 0, 123);
+  background: radial-gradient(
+    circle,
+    rgba(100, 0, 123, 1) 0%,
+    rgba(62, 20, 86, 1) 100%
+  );
+  overflow: hidden;
+} */
+/* button {
+  color: white;
+  padding: 10px 30px;
+  font-size: 1em;
+  background: transparent;
+  border-radius: 50px;
+  border: 1px solid white;
+  margin: 40px auto 0;
+  cursor: pointer;
+  opacity: 0.7;
+} */
