--- a/src/components/TsParticle/TsParticle.css
+++ b/src/components/TsParticle/TsParticle.css
@@ -5,4 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: -2300;
+  /* color: #1a2602; */
+  /* color: #022c2c; */
+  /* background-color: #021818eb; */
 }
