some data text changes, resizing the appcards, and favicon

--- a/src/components/AppCard/AppCard.css
+++ b/src/components/AppCard/AppCard.css
@@ -10,6 +10,7 @@
   color: #5a5454;
   background-color: #90ee90;
   border-color: #cff2cf;
+  width: 100%;
 }
 .btn-primary:hover {
   color: #4e5751;
