--- a/src/components/AppCard/AppCard.css
+++ b/src/components/AppCard/AppCard.css
@@ -1,10 +1,11 @@
 .app-card {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459);
+  box-shadow: 0 4px 5px 3px rgba(177, 234, 177, 0.5);
   opacity: 0.9;
   transition: all 0.5s, ease 0s;
   height: 100%;
   color: #ffffff;
   background-color: transparent;
+  /* position: relative; */
 }
 .btn-primary {
   color: #5a5454;
@@ -26,4 +27,22 @@
   height: 15rem;
   width: 100%;
   object-fit: cover;
+}
+
+.bottom-buttons {
+  /* position: absolute;
+  bottom: 3%; */
+  margin-bottom: 0.6rem;
+  /* height: 40%; */
+}
+.description {
+  /* height: 60%; */
+  /* height: 15rem; */
+  margin: 0.5rem;
+  overflow: scroll;
+}
+@media (max-width: 1200px) {
+  .project-buttons {
+    margin-bottom: 0.5rem;
+  }
 }
