--- a/src/components/AppCard/AppCard.css
+++ b/src/components/AppCard/AppCard.css
@@ -40,6 +40,7 @@
   /* height: 15rem; */
   margin: 0.5rem;
   overflow: scroll;
+  color: #ffffff;
 }
 @media (max-width: 1200px) {
   .project-buttons {
