--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -48,3 +48,55 @@
   max-height: 400px;
   margin: 3em;
 }
+.contact-me {
+  text-align: center;
+  padding-top: 1.5em;
+  color: #ffffff;
+}
+.contact-me-link {
+  justify-content: center;
+  /* padding-top: 1rem; */
+}
+
+.center-text {
+  text-align: center;
+}
+.list-icon {
+  margin: 0.5em 0 0.5em !important;
+  padding: 0 !important;
+  position: relative;
+  padding-top: 1rem;
+  justify-content: center;
+}
+.media-social {
+  display: inline-block !important;
+  padding: 0 1em;
+}
+.dashboard-icon {
+  /* color: #ffffff; */
+  position: relative;
+  display: inline-block;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  background-color: #ffffff;
+  transition: 0.5s;
+  font-size: 2em;
+  color: #022c2c;
+}
+.dashboard-icon::before {
+  /* color: #ffffff; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(177, 234, 177, 0.5);
+}
+.dashboard-icon:hover {
+  transform: scale(1.1);
+  box-shadow: rgba(177, 234, 177, 0.5);
+  cursor: pointer;
+  color: rgba(6, 76, 6, 0.9);
+}
